--- a/whatever.html
+++ b/whatever.html
@@ -2,9 +2,9 @@
 
 <html>
 <head>
-<title>Coolio!</title>
+<title>Whatever</title>
 </head>
 <body>
-Checkitout! Adam is a dumby-dumb!
+This is whatever. Say hello to whatever, Jimmy.
 </body>
 </html>
