Fixed Bug where image uploading did not work
Changed name of uploaded file from "title" to "file" (Sorry this wasn't documented well in the server code)

Changed the submission URL to reflect new domain name

--- a/imageupload.html
+++ b/imageupload.html
@@ -10,8 +10,8 @@ Flashy Image Upload
 
 <body>
 Please choose an image to upload:
-<form name="upload" method="post" enctype="multipart/form-data" action="http://ec2-54-235-50-200.compute-1.amazonaws.com/api/add_image" >
-<input type="file" name="image" />
+<form name="upload" method="post" enctype="multipart/form-data" action="http://www.flashyapp.com/api/add_image" >
+<input type="file" name="file" />
 
 <input type="submit" />
 </form>
