(Very) Basic Infrastructure
Added temporary infrastructure for ease of access to all pages, and
replaced the placeholder images in getcard.html with less awesome ones.

--- a/imageupload.html
+++ b/imageupload.html
@@ -9,6 +9,9 @@ Flashy Image Upload
 </head>
 
 <body>
+
+<p> <a href="index.html">Return to Index</a> </p>
+
 Please choose an image to upload:
 <form name="upload" method="post" enctype="multipart/form-data" action="http://www.flashyapp.com/api/add_image" >
 <input type="file" name="file" />
