--- a/newuser.html
+++ b/newuser.html
@@ -9,12 +9,14 @@ Flashy: New User
 </head>
 
 <body>
-Please enter the following information:
+<p> <a href="index.html">Return to Index</a> </p>
+
+Please enter the following information: <br>
 <form name="data" method="post" action="http://www.flashyapp.com/api/user/new_user" >
 
-Username: <input type="text" name="username" />
-Password: <input type="password" name="password" />
-Email Address: <input type="text" name="email" />
+Username: <input type="text" name="username" /> <br>
+Password: <input type="password" name="password" /> <br>
+Email Address: <input type="text" name="email" /> <br>
 <input type="submit" />
 </form>
 
