--- a/createdeck.html
+++ b/createdeck.html
@@ -9,6 +9,9 @@ Flashy: Create Deck from Image
 </head>
 
 <body>
+
+<p> <a href="index.html">Return to Index</a> </p>
+
 Please select an image:
 <form name="upload" method="post" enctype="multipart/form-data" action="http://www.flashyapp.com/api/deck/new/from_image" >
 <input type="file" name="file" />
