--- a/getcard.html
+++ b/getcard.html
@@ -10,9 +10,13 @@ Flashy: Card Viewer
 
 <body>
 
+<p> <a href="index.html">Return to Index</a> </p>
+
+<img src="http://www.flashyapp.com/user_images/11.png" alt="Flashy Card" /> <br>
+
 <button name = "previous">Previous Card</button>
-<img src="http://www.flashyapp.com/user_images/1.jpg" alt="Flashy Card" />
-<button name = "next">Next Card</button>
+<button name = "next">Next Card</button> <br>
+
 <button name = "deck">View Deck</button>
 
 <script src="jquery.js"></script>
