--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@ All pages currently WIP. <br> <br>
 
 <a href="imageupload.html">Image Uploader</a> - Functional, minimal interface <br>
 <a href="getcard.html">Card Viewer</a> - Hard-coded sample cards, minimal interface <br>
+
+<h1>User Interactions</h1>
 <a href="newuser.html">Create New User</a> - WIP <br>
+<a href="modify_user.html">Change Password</a> - WIP <br>
+<a href="login.html">Login</a> - WIP <br>
+
+<h1>Deck Interactions</h1>
+
 <a href="createdeck.html">Create Deck from Image</a> - WIP <br>
 
 </body>
