--- a/modify_user.html
+++ b/modify_user.html
@@ -4,23 +4,23 @@
 
 <head>
 <title>
-Flashy: New User Creation
+Flashy: User Modification
 </title>
 </head>
 
 <body>
 <p> <a href="index.html">Return to Index</a> </p>
 
-To create a new user, please enter the following information: <br>
+To change your password, please enter the following information: <br>
 <form id="form" name="data" method="post" action="http://www.flashyapp.com/api/user/create_user" >
 
 Username: <input type="text" name="username" /> <br>
-Password: <input type="password" name="password" /> <br>
-Email Address: <input type="text" name="email" /> <br>
+Old Password: <input type="password" name="old_password" /> <br>
+New Password: <input type="password" name="new_password" /> <br>
 <input type="submit" id="button" />
 </form>
 
 <script src="jquery.js"></script>
-<script src="newuser.js"></script>
+<script src="modify_user.js"></script>
 </body>
 </html> 
