--- a/login.html
+++ b/login.html
@@ -4,23 +4,22 @@
 
 <head>
 <title>
-Flashy: New User Creation
+Flashy: User Login
 </title>
 </head>
 
 <body>
 <p> <a href="index.html">Return to Index</a> </p>
 
-To create a new user, please enter the following information: <br>
+To login to your user account, please enter the following information: <br>
 <form id="form" name="data" method="post" action="http://www.flashyapp.com/api/user/create_user" >
 
 Username: <input type="text" name="username" /> <br>
 Password: <input type="password" name="password" /> <br>
-Email Address: <input type="text" name="email" /> <br>
 <input type="submit" id="button" />
 </form>
 
 <script src="jquery.js"></script>
-<script src="newuser.js"></script>
+<script src="login.js"></script>
 </body>
 </html> 
