--- a/index.html
+++ b/index.html
@@ -10,21 +10,26 @@ Flashy: Index
 
 <body>
 
-This page, as it is, is only present in the prototype website as a directory to all other pages. <br> <br>
+<p id="logged_in" ></p>
 
-All pages currently WIP. <br> <br>
+<p>This page, as it is, is only present in the prototype website as a directory to all other pages. </p>
+
+<p>All pages currently WIP. </p>
 
 <a href="imageupload.html">Image Uploader</a> - Functional, minimal interface <br>
 <a href="getcard.html">Card Viewer</a> - Hard-coded sample cards, minimal interface <br>
 
 <h1>User Interactions</h1>
-<a href="newuser.html">Create New User</a> - WIP <br>
-<a href="modify_user.html">Change Password</a> - WIP <br>
-<a href="login.html">Login</a> - WIP <br>
+<a href="newuser.html">Create New User</a> - Fully functional (design is WIP) <br>
+<a href="modify_user.html">Change/Reset Password</a> - Change password - Fully functional / Reset password - WIP <br>
+<a href="login.html">Login/Logout</a> - Fully functional <br>
 
 <h1>Deck Interactions</h1>
 
 <a href="createdeck.html">Create Deck from Image</a> - WIP <br>
 
+<script src="jquery.js"></script>
+<script src="jquery.cookie.js"></script>
+<script src="index.js"></script>
 </body>
 </html> 
