Deck API at 50%
Added functionality for get_decks and new/from_list. The rest should be
easy from there.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ Flashy: Index
 
 <h1>Deck Interactions</h1>
 
-<a href="createdeck.html">Create Deck from Image</a> - WIP <br>
+<a href="decklist.html">View Decks</a> - Functional <br>
+<a href="createdeck.html">Create Deck</a> - From list - fully functional / From image - WIP <br>
 
 <script src="jquery.js"></script>
 <script src="jquery.cookie.js"></script>
