--- a/createdeck.html
+++ b/createdeck.html
@@ -12,6 +12,10 @@ Flashy: Create New Deck
 
 <p> <a href="index.html">Return to Index</a> </p>
 
+<p id="logged_in"></p>
+
+<p id="logged_out" >Please log in first to access deck features. </p>
+
 Create a new deck from a picture of a list of terms:
 <form id="from_image" name="data" method="post" enctype="multipart/form-data" action="http://www.flashyapp.com/api/deck/new/from_image" >
 <input type="file" name="file" /> <br>
@@ -20,13 +24,17 @@ Create a new deck from a picture of a list of terms:
 
 <br>
 
-Create a new, empty deck:
-<form id="from_list" name="data" method="post" action="http://www.flashyapp.com/api/deck/new/from_lists"> 
-Optional - create cards from a typed list of terms: <br> <input type="textarea" />
+Create a new, empty deck of flash cards:
+<form id="from_list" name="data" method="post" action="http://www.flashyapp.com/api/deck/new/from_lists">
+Enter the name of your deck: <input type="text" name="deck_name" /> <br>
+Enter a brief description of its intended contents: <input type="text" name="description" /> <br> 
+Optionally, create your cards automatically from a typed list of terms: <br> 
+<textarea form="from_list" name="list" rows=5></textarea>
 <input type="submit" />
 </form>
 
 <script src="jquery.js"></script>
+<script src="jquery.cookie.js"></script>
 <script src="createdeck.js"></script>
 </body>
 </html> 
