Deck Operations + JQuery UI
Create Deck from Image not yet implemented.

All other deck API is in a working state or will be as soon as server
bugs are fixed.

In addition, JQuery UI has been patched in on top of JQuery. This will
allow for some cool dynamic interface and is the first step towards a
professional-looking website. Some of it is already visible in
getdeck.html

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@ Flashy: Index
 
 <h1>Deck Interactions</h1>
 
-<a href="decklist.html">View Decks</a> - Functional <br>
+<a href="decklist.html">View Deck List</a> - Functional <br>
 <a href="createdeck.html">Create Deck</a> - From list - fully functional / From image - WIP <br>
+<a href="getdeck.html">View Deck</a> - Should not access from this page. Go to View Deck List and select a deck.
 
 <script src="jquery.js"></script>
 <script src="jquery.cookie.js"></script>
