--- a/getdeck.html
+++ b/getdeck.html
@@ -28,9 +28,11 @@ Flashy: Deck View
 <div id="modify_dialog"></div>
 <div id="card_list"><p id="card_viewer"></p><p id="card_options"></p></div>
 <div id="create_dialog"></div>
+<div id="add_resource"></div>
 
 <script src="jquery.js"></script>
 <script src="jquery.cookie.js"></script>
+<script src="jquery.form.js"></script>
 <script src="jquery-ui.js"></script>
 <script src="getdeck.js"></script>
 </body>
