--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ Flashy: Index
 <a href="decklist.html">View Deck List</a> - Functional <br>
 <a href="createdeck.html">Create Deck</a> - From list - fully functional / From image - WIP <br>
 <a href="getdeck.html">View Deck</a> - Should not access from this page. Go to View Deck List and select a deck.
+<a href="movinglines.html">Moving Lines Demo</a> - Demo of Line Division Code 
 
 <script src="jquery.js"></script>
 <script src="jquery.cookie.js"></script>
