--- a/movinglines.html
+++ b/movinglines.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+<link rel="stylesheet" type="text/css" href="movinglines.css" media="screen" />
 <title>
 Flashy: Moving Lines
 </title>
@@ -10,9 +11,10 @@ Flashy: Moving Lines
 
 <body>
 
-
+<img src="raphael.gif" alt="image" id="image" class="image" width=500 height=500></img>
 
 <script src="jquery.js"></script>
+<script src="jquery-ui.js"></script>
 <script src="movinglines.js"></script>
 </body>
 </html> 
