--- a/getdeck.html
+++ b/getdeck.html
@@ -4,13 +4,14 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="jquery-ui-custom.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <title>
 Flashy: Deck View
 </title>
 </head>
 
 <body>
-<p> <a href="index.html">Return to Index</a> </p>
+<p> <a href="index.html"><img src="flashy_logo.png" alt="Flashy Logo" width=250 height=165></img></a> </p>
 
 <p id="logged_out" >Please log in first to access deck features. </p>
 
