--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <html>
 
 <head>
+<link rel="stylesheet" type="text/css" href="jquery-ui-custom.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <title>
 Flashy: Index
 </title>
 </head>
 
 <body>
+
+<p> <img src="flashy_logo.png" alt="Flashy Logo" width=250 height=165></img> </p>
 
 <p id="logged_in" ></p>
 
@@ -19,16 +23,16 @@ Flashy: Index
 <a href="imageupload.html">Image Uploader</a> - Functional, minimal interface <br>
 <a href="getcard.html">Card Viewer</a> - Hard-coded sample cards, minimal interface <br>
 
-<h1>User Interactions</h1>
+<h2>User Interactions</h2>
 <a href="newuser.html">Create New User</a> - Fully functional (design is WIP) <br>
 <a href="modify_user.html">Change/Reset Password</a> - Change password - Fully functional / Reset password - WIP <br>
 <a href="login.html">Login/Logout</a> - Fully functional <br>
 
-<h1>Deck Interactions</h1>
+<h2>Deck Interactions</h2>
 
 <a href="decklist.html">View Deck List</a> - Functional <br>
 <a href="createdeck.html">Create Deck</a> - From list - fully functional / From image - WIP <br>
-<a href="getdeck.html">View Deck</a> - Should not access from this page. Go to View Deck List and select a deck.
+<a href="getdeck.html">View Deck</a> - Should not access from this page. Go to View Deck List and select a deck. <br>
 <a href="movinglines.html">Moving Lines Demo</a> - Demo of Line Division Code 
 
 <script src="jquery.js"></script>
