--- a/movinglines.html
+++ b/movinglines.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="movinglines.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <title>
 Flashy: Moving Lines
 </title>
@@ -11,7 +11,7 @@ Flashy: Moving Lines
 
 <body>
 
-<img src="raphael.gif" alt="image" id="image" class="image" width=500 height=500></img>
+<img src="flashy_logo.png" alt="image" id="image" class="image" width=500 height=329></img>
 
 <script src="jquery.js"></script>
 <script src="jquery-ui.js"></script>
