--- a/createdeck.html
+++ b/createdeck.html
@@ -3,6 +3,8 @@
 <html>
 
 <head>
+<link rel="stylesheet" type="text/css" href="jquery-ui-custom.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <title>
 Flashy: Create New Deck
 </title>
@@ -10,7 +12,7 @@ Flashy: Create New Deck
 
 <body>
 
-<p> <a href="index.html">Return to Index</a> </p>
+<p> <a href="index.html"><img src="flashy_logo.png" alt="Flashy Logo" width=250 height=165></img></a> </p>
 
 <p id="logged_in"></p>
 
