--- a/login.html
+++ b/login.html
@@ -3,13 +3,15 @@
 <html>
 
 <head>
+<link rel="stylesheet" type="text/css" href="jquery-ui-custom.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <title>
 Flashy: User Login
 </title>
 </head>
 
 <body>
-<p> <a href="index.html">Return to Index</a> </p>
+<p> <a href="index.html"><img src="flashy_logo.png" alt="Flashy Logo" width=250 height=165></img></a> </p>
 
 <p id="logged_out" >To login to your user account, please enter the following information: </p>
 <form id="form" name="data" method="post" action="http://www.flashyapp.com/api/user/create_user" >
