Moving Lines Generalized
upload_image:

The uploaded image now pops up in a JQuery UI dialog box. Movable lines
now show up in the box as well. The lines and the dialog box are
tailored to fit the size of the image.

Next step: lines should actually reflect the divs I receive from the
server.

--- a/createdeck.html
+++ b/createdeck.html
@@ -20,11 +20,13 @@ Flashy: Create New Deck
 
 Create a new deck from a picture of a list of terms:
 <form id="from_image" name="data" method="post" enctype="multipart/form-data" action="http://www.flashyapp.com/api/deck/new/upload_image" >
-<input type="file" name="file" /> <br>
+<input type="file" id="file" name="file" /> <br>
 <input type="submit" />
 </form>
 
 <br>
+
+<div id="divlines"></div>
 
 Create a new, empty deck of flash cards:
 <form id="from_list" name="data" method="post" action="http://www.flashyapp.com/api/deck/new/from_lists">
