--- a/createdeck.html
+++ b/createdeck.html
@@ -20,6 +20,8 @@ Flashy: Create New Deck
 
 Create a new deck from a picture of a list of terms:
 <form id="from_image" name="data" method="post" enctype="multipart/form-data" action="http://www.flashyapp.com/api/deck/new/upload_image" >
+Enter the name of your deck: <input type="text" name="deck_name" /> <br>
+Enter a brief description of its intended contents: <input type="text" name="description" /> <br>
 <input type="file" id="file" name="file" /> <br>
 <input type="submit" />
 </form>
