Resource Regex Replace
Implemented: Regular expression replacement for resources already
embedded within cards.

TODO:
-interface for embedding new resources within cards
-restructure to single-page website.

--- a/getdeck.html
+++ b/getdeck.html
@@ -36,5 +36,8 @@ Flashy: Deck View
 <script src="jquery.form.js"></script>
 <script src="jquery-ui.js"></script>
 <script src="getdeck.js"></script>
+<script src="nicEdit.js"></script>
+<script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
+
 </body>
 </html> 
