--- a/index.html
+++ b/index.html
@@ -175,15 +175,15 @@
 	<h2>Please enter new text for side A and side B.</h2>
 	<p>Side A: <textarea id="modify-card-sidea" class="smallbox" ></textarea>
 	Side B: <textarea id="modify-card-sideb" class="smallbox" ></textarea></p>
-	<p>To add an image, set the side to add it to and use the button: </p>
+	<!-- <p>To add an image, set the side to add it to and use the button: </p>
 	<input id='modify-card-side-choicea' type='radio' name='side' value='Side A'>Side A</input>
 	<input id='modify-card-side-choiceb' type='radio' name='side' value='Side B'>Side B</input>
 	<form id='modify-card-form' action='#' method='post'>
 	<input type='hidden' id='modify-card-session_id' name='session_id' />
 	<input type='hidden' id='modify-card-username' name='username' />
 	<input type='hidden' id='modify-card-index' name='index' />
-	<input type='file' id='modify-card-file' name='file' />
-	<input type="submit" id="modify-card-confirm" class="smallbutton" value="Modify" ></input></form>
+	<input type='file' id='modify-card-file' name='file' /> -->
+	<input type="submit" id="modify-card-confirm" class="smallbutton" value="Modify" ></input><!---</form>-->
 	<button id="modify-card-cancel" class="smallbutton" >Cancel</button>
 	</div>
 	
